--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "node-red-render-template",
   "version": "1.0.0",
   "description": "Node-RED on Render",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node-red -p $PORT -u ./data"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "node-red": "^3.1.0"
   }
 }
